@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v22.3.21-cur, done by cs@nop.
--;-;-;2022-03-21 22:03:46, took 00:07:14, with 100 workers, on 2780 cases, 0 failed, 0 traces, 7 retries
+-;-;-;2022-03-21 22:23:31, took 00:14:51, with 100 workers, on 2780 cases, 1 failed, 16 traces, 24 retries
 -;-;-;./rtr.bin
 http://sources.freertr.net/cfg/basic.tst;basic.tst;success;dummy test
 http://sources.freertr.net/cfg/conn-amt01.tst;conn-amt01.tst;success;amt over ipv4
@@ -337,7 +337,7 @@ http://sources.freertr.net/cfg/conn-ppp10.tst;conn-ppp10.tst;success;ppp with sh
 http://sources.freertr.net/cfg/conn-ppp11.tst;conn-ppp11.tst;success;ppp with long multilink fragmentation
 http://sources.freertr.net/cfg/conn-ppp12.tst;conn-ppp12.tst;success;ppp with asymmetric multilink fragmentation
 http://sources.freertr.net/cfg/conn-ppp13.tst;conn-ppp13.tst;success;ppp with asymmetric multilink
-http://sources.freertr.net/cfg/conn-ppp14.tst;conn-ppp14.tst;success;ppp address propagation
+http://sources.freertr.net/cfg/conn-ppp14.tst;conn-ppp14.tst;#6-run-r1 tping 100 15 1234::2 /vrf v1;ppp address propagation
 http://sources.freertr.net/cfg/conn-pppoe01.tst;conn-pppoe01.tst;success;pppoe over ethernet encapsulation
 http://sources.freertr.net/cfg/conn-pppoe02.tst;conn-pppoe02.tst;success;pppoe over bridge encapsulation
 http://sources.freertr.net/cfg/conn-pppoe03.tst;conn-pppoe03.tst;success;ppp relay over pppoe
