@@ -333,7 +333,7 @@ qc pass: ppp with short multilink fragmentation
 qc pass: ppp with long multilink fragmentation
 qc pass: ppp with asymmetric multilink fragmentation
 qc pass: ppp with asymmetric multilink
-qc pass: ppp address propagation
+failed: ppp address propagation
 qc pass: pppoe over ethernet encapsulation
 qc pass: pppoe over bridge encapsulation
 qc pass: ppp relay over pppoe
